force-app/main/default/objects/Site_Readiness_Item__c/Site_Readiness_Item__c.object-meta.xml
<CustomObject>
    <label>Site Readiness Item</label>
    <pluralLabel>Site Readiness Items</pluralLabel>
    <nameField>
        <label>Item Name</label>
        <type>AutoNumber</type>
        <displayFormat>SRI-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>