force-app/main/default/objects/Site_Readiness_Item__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Site Readiness Items (Assigned To)</relationshipLabel>
    <relationshipName>Site_Readiness_Items_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>