force-app/main/default/objects/Site_Readiness_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Grading</fullName><default>false</default><label>Grading OK</label></value>
            <value><fullName>Access</fullName><default>false</default><label>Access OK</label></value>
            <value><fullName>Irrigation</fullName><default>false</default><label>Irrigation OK</label></value>
            <value><fullName>Debris Clear</fullName><default>false</default><label>Debris Clear</label></value>
            <value><fullName>Builder Punch Clear</fullName><default>false</default><label>Builder Punch Clear</label></value>
            <value><fullName>Utilities Cleared</fullName><default>false</default><label>Utilities Cleared</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>