force-app/main/default/objects/Site_Readiness_Item__c/fields/Site_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness__c</fullName>
    <label>Site Readiness</label>
    <referenceTo>Site_Readiness__c</referenceTo>
    <relationshipLabel>Site Readiness Items</relationshipLabel>
    <relationshipName>Site_Readiness_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>